--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
 /.bundle/
 /.yardoc
-/Gemfile.lock
 /_yardoc/
 /coverage/
 /doc/
 /pkg/
 /spec/reports/
 /tmp/
+
+/rdoc/
+*.gem
+
+# rspec failure tracking
+.rspec_status
+
+/.vscode/
+*.code-workspace
+
+scratch.rb
+readme.txt
